fix file loading bugs